customized the functional navbar

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Next Website</title>
+    <title>Mbutu Labs</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/" id="navbar__logo">NEXT</a>
+            <a href="/" id="navbar__logo">ML</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -20,10 +20,10 @@
                     <a href="/" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="tech.html" class="navbar__links">Tech</a>
+                    <a href="Dashboards.html" class="navbar__links">Dashboards</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Products</a>
+                    <a href="Apps.html" class="navbar__links">Apps</a>
                 </li>
                 <li class="navbar__btn">
                     <a href="/" class="button">Sign up</a>
