--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mbutu Labs</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -31,6 +34,31 @@
             </ul>
         </div>
     </nav>
+    <div class="main">
+        <div class="main__container">
+            <div class="main__content">
+                <h1>NEXT GENERATION</h1>
+                <h2>TECHNOLOGY</h2>
+                <p>See what makes us different.</p>
+                <button class="main__btn">
+                    <a href="/">Get started</a>
+                </button>
+            </div>
+            <div class="main__img__container">
+                <img src="images/pic1.svg" alt="image" id="main__img">
+            </div>
+        </div>
+    </div>
+    <div class="services">
+        <h1>See whats up</h1>
+        <div class="services__container">
+            <div class="service__card">
+                <h2>Experience Bliss</h2>
+                <p>AIPowered Technology</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
