--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
         <div class="services__container">
             <div class="service__card">
                 <h2>Experience Bliss</h2>
-                <p>AIPowered Technology</p>
+                <p>AI Powered Technology</p>
                 <button>Get Started</button>
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
