--- a/Dashboards.html
+++ b/Dashboards.html
@@ -21,7 +21,7 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Home</a>
+                    <a href="Home.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="Dashboards.html" class="navbar__links">Dashboards</a>
