--- a/Home.html
+++ b/Home.html
@@ -56,24 +56,24 @@
         <h1>See whats up</h1>
         <div class="services__container">
             <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
+                <h2>Interesting visualizations</h2>
+                <p>Check out interesting data visualizations</p>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
-                <h2>Are you Ready</h2>
-                <p>Take A leap</p>
+                <h2>Automations</h2>
+                <p>Apps that automate some processes</p>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
+                <h2>Articles</h2>
+                <p>Technology news</p>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
-                <button>Get Started</button>
+                <h2>Suggestions</h2>
+                <p>What do you think</p>
+                <button>Open</button>
             </div>
         </div>
     </div>
