--- a/Dashboards_titanic.html
+++ b/Dashboards_titanic.html
@@ -55,7 +55,7 @@
             <div class="services__card">
                 <h2>When the huge ship sank in 1912,</h2>
                 <p>These were the recovered logs</p>
-                <a href="Dashboards_titanic.html">View</a>
+                <button>View</button>
             </div>
             <div class="services__card">
                 <h2>Data From A Psedonym Bank</h2>
