clicks the service card instead

--- a/Dashboards.html
+++ b/Dashboards.html
@@ -52,10 +52,10 @@
     <div class="services">
         <h1>See whats up</h1>
         <div class="services__container">
-            <div class="services__card">
+            <div href=Dashboards_titanic.html class="services__card">
                 <h2>When the huge ship sank in 1912,</h2>
                 <p>These were the recovered logs</p>
-                <a href="Dashboards_titanic.html" class="button">View</a>
+                <button >View</button>
             </div>
             <div class="services__card">
                 <h2>Data From A Psedonym Bank</h2>
