added the titanics page

--- a/Dashboards.html
+++ b/Dashboards.html
@@ -52,10 +52,12 @@
     <div class="services">
         <h1>See whats up</h1>
         <div class="services__container">
-            <div href=Dashboards_titanic.html class="services__card">
+            <div class="services__card">
                 <h2>When the huge ship sank in 1912,</h2>
                 <p>These were the recovered logs</p>
-                <button >View</button>
+                <a href=Dashboards_titanic.html>
+                    <button>View</button>
+                </a>
             </div>
             <div class="services__card">
                 <h2>Data From A Psedonym Bank</h2>
