--- a/Dashboards_titanic.html
+++ b/Dashboards_titanic.html
@@ -39,41 +39,15 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>TAKE A LOOK </h1>
-                <h2>AT WHAT THESE DATASETS ARE SAYING</h2>
-                <p>Data can appear random at first but applying statistical methods sheds light onto the data.</p>
+                <h1>The Titanic</h1>
+                <p>Here you will find some information about the ship called "The Titanic".</p>
             </div>
             <div class="main__img__container">
                 <img src="images/pic1.svg" alt="image" id="main__img">
             </div>
         </div>
     </div>
-    <!-----Services Section-->
-    <div class="services">
-        <h1>See whats up</h1>
-        <div class="services__container">
-            <div class="services__card">
-                <h2>When the huge ship sank in 1912,</h2>
-                <p>These were the recovered logs</p>
-                <button>View</button>
-            </div>
-            <div class="services__card">
-                <h2>Data From A Psedonym Bank</h2>
-                <p>see  their sales</p>
-                <button>View</button>
-            </div>
-            <div class="services__card">
-                <h2>Social Media Trends</h2>
-                <p>Take a look at interesting social media data</p>
-                <button>View</button>
-            </div>
-            <div class="services__card">
-                <h2>Aeroplane Flight Routes</h2>
-                <p>Check out the most used routes</p>
-                <button>View</button>
-            </div>
-        </div>
-    </div>
+
 
     <!-----Footer Section-->
     <div class="footer__container">
