--- a/Apps.html
+++ b/Apps.html
@@ -43,7 +43,7 @@
                 <h2>TRY THEM OUT</h2>
                 <p>Get some things done hustle free.</p>
                 <button class="main__btn">
-                    <a href="/">Get started</a>
+                    <a href="Home.html">Get started</a>
                 </button>
             </div>
             <div class="main__img__container">
