--- a/Dashboards_titanic.html
+++ b/Dashboards_titanic.html
@@ -31,7 +31,7 @@
                     <a href="Apps.html" class="navbar__links">Apps</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/" class="button">Sign up</a>
+                    <a href="Dashboards.html" class="button">Sign up</a>
                 </li>
             </ul>
         </div>
