--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h2>INOVATIVE TECHNOLOGY HUB</h2>
                 <p>Experience cutting edge technology.</p>
                 <button class="main__btn">
-                    <a href="/">Get started</a>
+                    <a href="Home.html">Get started</a>
                 </button>
             </div>
             <div class="main__img__container">
