--- a/Apps.html
+++ b/Apps.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mbutu Labs</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style_apps.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
@@ -47,7 +47,7 @@
                 </button>
             </div>
             <div class="main__img__container">
-                <img src="images/pic2.svg" alt="image" id="main__img">
+                <img src="images/pic1.svg" alt="image" id="main__img">
             </div>
         </div>
     </div>
@@ -56,23 +56,23 @@
         <h1>See whats up</h1>
         <div class="services__container">
             <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
+                <h2>A CV Maker</h2>
+                <p>AI Powered Technology to revamp your resume</p>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
-                <h2>Are you Ready</h2>
-                <p>Take A leap</p>
+                <h2>Insta Plus</h2>
+                <p>Enhance your Instagram page using our tool</p>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
+                <h2>Recipe Generator</h2>
+                <p>AI Powered Technology that generates diverse recipes</p>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
-                <h2>Experience Bliss</h2>
-                <p>AI Powered Technology</p>
+                <h2>Outfit Sorter</h2>
+                <p>AI Powered Technology that creates variatons of outfits from images</p>
                 <button>Get Started</button>
             </div>
         </div>
