--- a/Dashboards.html
+++ b/Dashboards.html
@@ -68,6 +68,7 @@
             <div class="services__card">
                 <h2>Social Media Trends</h2>
                 <p>Take a look at interesting social media data</p>
+                <a href=Dashboards_Social_media_trends.html></a>
                 <button>View</button>
             </div>
             <div class="services__card">
