--- a/Dashboards.html
+++ b/Dashboards.html
@@ -74,6 +74,7 @@
             <div class="services__card">
                 <h2>Aeroplane Flight Routes</h2>
                 <p>Check out the most used routes</p>
+                <a href=Dashboards_AeroPlaneFlightsRoutes.html></a>
                 <button>View</button>
             </div>
         </div>
