--- a/Apps.html
+++ b/Apps.html
@@ -58,11 +58,13 @@
             <div class="services__card">
                 <h2>A CV Maker</h2>
                 <p>AI Powered Technology to revamp your resume</p>
+                <a href=Apps_CV_maker.html></a>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
                 <h2>Insta Plus</h2>
                 <p>Enhance your Instagram page using our tool</p>
+                <a href=Apps_Insta_plus.html></a>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
