--- a/Apps.html
+++ b/Apps.html
@@ -70,6 +70,7 @@
             <div class="services__card">
                 <h2>Recipe Generator</h2>
                 <p>AI Powered Technology that generates diverse recipes</p>
+                <a href=Dashboards_Recipe_app.html></a>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
