corrected link name

--- a/Apps.html
+++ b/Apps.html
@@ -70,12 +70,13 @@
             <div class="services__card">
                 <h2>Recipe Generator</h2>
                 <p>AI Powered Technology that generates diverse recipes</p>
-                <a href=Dashboards_Recipe_app.html></a>
+                <a href=Apps_Recipe_app.html></a>
                 <button>Get Started</button>
             </div>
             <div class="services__card">
                 <h2>Outfit Sorter</h2>
                 <p>AI Powered Technology that creates variatons of outfits from images</p>
+                <a href=Dashboards_titanic.html></a>
                 <button>Get Started</button>
             </div>
         </div>
