--- a/Dashboards_Social_media_trends.html
+++ b/Dashboards_Social_media_trends.html
@@ -40,8 +40,8 @@
     <div class="main">
         <div class="main__container">
             <div class="main__content">
-                <h1>The Titanic</h1>
-                <p>Here you will find some information about the ship called "The Titanic".</p>
+                <h1>Social Media Trends</h1>
+                <p>Here you will find some information about Socail Media Trends.</p>
             </div>
             <div class="main__img__container">
                 <img src="images/pic1.svg" alt="image" id="main__img">
