updated the titanics dashboard

--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,12 @@
                 <li class="navbar__item">
                     <a href="Apps.html" class="navbar__links">Apps</a>
                 </li>
-                <li class="navbar__btn">
+                <!----
+                <li class="navbar__item"></li>
+                    <a href="test.html" class="navbar__links">Test page</a>
+                </li>
+                --->
+                <li class="navbar__btn"></li>
                     <a href="Home.html" class="button">Sign up</a>
                 </li>
             </ul>
